# wordfind

./: .gitignore  Cargo.toml  LICENSE  README.md  Shuttle.toml
assets/: 404.html
js/: htmx.min.js
src/: main.rs  scrabble.rs
templates/: about.html  anagram_answer.html  anagram_scrabble.html  cheat_scrabble.html  demo_scrabble.html  full_answer.html  guess.html  guess_answer.html  guess_scrabble.html  index.html  layout.html
