[package]
name = "wordfinder"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rayon = "1.7"
lazy_static = "1.5.0"
tokio = { version = "1.39.2", features = ["full"] }
tera = "1"
axum = "0.7.3"
tower = "0.4.13"
tower-http = { version = "=0.5.0", features = ["fs"] }
# shuttle-runtime = "0.48.0"
shuttle-runtime = { version = "0.48.0", default-features = false }
shuttle-axum = "0.48.0"
serde = "1.0.207"
