[package]
name = "wordfinder"
version = "0.2.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rayon = "1.11.0"
lazy_static = "1.5.0"
tokio = { version = "1.49.0", features = ["full"] }
tera = "1.20.1"
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "=0.6.8", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
